[tool.poetry]
name = "dashplus"
version = "0.1.2"
description = "A superset of Dash for Autodesk Maya."
authors = ["Dan Bradham <danielbradham@gmail.com>"]
license = "MIT"
repository = "https://github.com/danbradham/dashplus"

[tool.poetry.dependencies]
python = "^2.7 || ^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
